<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent">

    <item
        android:id="@+id/info_shop"
        android:checkable="true"
        android:icon="@drawable/c_fur"
        android:title="@string/M_info_user" />

    <item
        android:id="@+id/shop_order"
        android:checkable="true"
        android:icon="@drawable/c_fur"
        android:title="@string/M_order" />

    <item
        android:id="@+id/change_shop"
        android:checkable="true"
        android:icon="@drawable/c_fur"
        android:title="@string/M_change_user" />

    <item
        android:id="@+id/quit_shop"
        android:checkable="true"
        android:icon="@drawable/c_fur"
        android:title="@string/M_quit" />

</menu>
