<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/login_photo"
        android:layout_width="@dimen/Head_User"
        android:layout_height="@dimen/Head_User"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp_40"
        android:src="@drawable/head1" />

    <LinearLayout
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_photo"
        android:layout_margin="@dimen/sp_12"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/I_U_name" />

        <EditText
            android:id="@+id/login_text_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_name"
        android:layout_margin="@dimen/sp_12"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/login_text_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_switch1"
        android:gravity="center"
        android:layout_below="@id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="@dimen/sp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User" />

        <Switch
            android:id="@+id/login_switch1_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Shopkeeper" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_switch"
        android:gravity="center"
        android:layout_below="@id/login_password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/sp_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login" />

        <Switch
            android:id="@+id/login_switch_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_confirm"
        android:text="@string/Confirm"
        android:layout_below="@id/login_switch"
        android:layout_centerHorizontal="true" />

</RelativeLayout>