<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_na"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yangy.mall.MainActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </SearchView>

        <Button
            android:id="@+id/Food"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_bar"
            android:layout_margin="2dp"
            android:background="@drawable/c_fd"
            android:text="@string/C_fd"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Clothes"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_bar"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/Food"
            android:layout_toRightOf="@id/Food"
            android:background="@drawable/c_cls"
            android:text="@string/C_cls"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Makeup"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_bar"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/Clothes"
            android:layout_toRightOf="@id/Clothes"
            android:background="@drawable/c_mkup"
            android:text="@string/C_mkup"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Exercise"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Food"
            android:layout_margin="2dp"
            android:background="@drawable/c_excs"
            android:text="@string/C_exc"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Furniture"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Clothes"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/Exercise"
            android:layout_toRightOf="@id/Exercise"
            android:background="@drawable/c_fur"
            android:text="@string/C_fur"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Electronic"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Makeup"
            android:layout_margin="2dp"
            android:layout_toEndOf="@id/Furniture"
            android:layout_toRightOf="@id/Furniture"
            android:background="@drawable/c_elc"
            android:text="@string/C_elc"
            android:textSize="20sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Exercise">

            <ListView
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"></ListView>
        </ScrollView>

        <Button
            android:id="@+id/Mainpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/c_fd"
            android:text="主页"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/Mainpage"
            android:background="@drawable/c_mkup"
            android:text="购物车"
            android:textSize="20sp" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView android:id="@+id/nav"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:headerLayout="@layout/head"
        app:menu="@layout/menu"

        >

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>